Fixes to footer and support for dark mode

--- a/src/app/page-home/page-home.component.html
+++ b/src/app/page-home/page-home.component.html
@@ -1,10 +1,10 @@
 <div class="jumbotron">
   <div class="container">
       <div class="row">
-              <div class="col-md-4">
-                      <img src="assets/images/Graham.jpg" alt="Photo of Graham" height="193" width="143" />
+              <div class="col-md-4 vertical-auto-center">
+                      <img src="assets/images/Graham.jpg" alt="Photo of Graham" height="193" width="143" class="rounded-circle"/>
                   </div>
-                  <div class="col-md-8">
+                  <div class="col-md-8 vertical-auto-center">
                           <h1>The Software Pilgrim</h1>
                           <p class="lead">Writings and resources from my personal journey in software development</p>
                   </div>
@@ -13,9 +13,9 @@
 </div>
 <div class="row" >
   <div class="col-md-4">
-      <h5><a routerLink="/resources">Resources for becoming a great developer</a></h5>
+      <h5><a routerLink="/resources">Recommended resources</a></h5>
       <p>
-          A list of useful and thought-provoking resources for becoming a great developer.
+          A list of useful and thought-provoking resources for becoming a better developer.
       </p>
   </div>
   <div class="col-md-4">
