--- a/src/app/shared-footer/shared-footer.component.html
+++ b/src/app/shared-footer/shared-footer.component.html
@@ -5,16 +5,20 @@
               <div class="col-md-4">
               <p><small>&copy; 2021 The Software Pilgrim</small></p>
               </div>
+          </div>
+          <div class="row">
               <div class="col-md-4">
-                  <small>
+                  <small>Stack Overflow Profile
               <a href="https://stackoverflow.com/users/45817/grahammc">
-                  Stack Overflow Profile for GrahamMc
+                  GrahamMc
               </a>
               </small>
               </div>
               <div class="col-md-4">
-                  <p><small>Follow <a href="https://twitter.com/GrahamMcZa">@GrahamMcZa on Twitter</a></small></p>
-                  <p><small><a href="https://www.github.com/grahammcallister"><img src="https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png" alt="Github logo" width="30" height="30"> www.Github.com/grahammcallister</a></small></p>
+                  <p><small>Twitter <a href="https://twitter.com/GrahamMcZa">@GrahamMcZa</a></small></p>
+              </div>
+              <div class="col-md-4">
+                <p><small>GitHub <a href="https://www.github.com/grahammcallister">www.github.com/grahammcallister</a></small></p>
               </div>
           </div>
       </div>
