Fix alignment and margins

--- a/src/app/page-home/page-home.component.html
+++ b/src/app/page-home/page-home.component.html
@@ -1,7 +1,7 @@
 <div class="jumbotron">
   <div class="container">
       <div class="row">
-              <div class="col-md-4 vertical-auto-center">
+              <div class="col-md-4 vertical-auto-center text-center mb-4">
                       <img src="assets/images/Graham.jpg" alt="Photo of Graham" height="193" width="143" class="rounded-circle"/>
                   </div>
                   <div class="col-md-8 vertical-auto-center">
