Working on developer resources page

--- a/src/app/page-resources/page-resources.component.html
+++ b/src/app/page-resources/page-resources.component.html
@@ -1,31 +1,39 @@
 <div class="row">&nbsp;</div>
-            <h2>Great developer resources</h2>
+            <h2>Recommended Resources For Developers</h2>
             <hr/>
-            <div class="row">
-                <div class="col-lg-12"><small>Last updated: 31 August 2021</small></div>
-            </div>
-            <p>&nbsp;</p>
 <div class="row">
     <div class="col-lg-12">
         <p>
-            There are so many resources available to developers. There is only enough time for exploring the most relevant and impactful. Below is a list of some of the most useful I've explored.
+            So many resources are available to developers. There is only enough time for exploring the most relevant and impactful. Below is a list of some of the most useful I've found.
         </p>
+        <div class="row">
+          <div class="col-lg-12"><small>Last updated: 20 October 2021</small></div>
+      </div>
 
-        <ul>
-            <li>
-                    <h4>Code Complete by Steve McConnell</h4>
-                    <p>
-                        <a href="https://www.amazon.com/Code-Complete-Practical-Handbook-Construction/dp/0735619670"><img src="https://images-na.ssl-images-amazon.com/images/I/515iO%2B-PRUL._SX408_BO1,204,203,200_.jpg" alt="Book cover image" width="90" height="120" /></a>
-                    </p>
-                    <hr />
-            </li>
-            <li>
-                <h4>The Pragmatic Programmer by Andrew Hunt and David Thomas</h4>
+        <p>&nbsp;</p>
+        <div class="media">
+          <img src="https://images-na.ssl-images-amazon.com/images/I/515iO%2B-PRUL._SX408_BO1,204,203,200_.jpg" alt="Book cover image" width="90" height="120" class="mr-3" />
+          <div class="media-body">
+                    <h5 class="mt-0">Code Complete, Second Edition by Steve McConnell</h5>
+                    <div>
+                        <a class="card-link" href="https://learning.oreilly.com/library/view/code-complete-second/0735619670/">Read book on O'Reilly Learning</a>
+                        <a class="card-link" href="https://www.amazon.com/Code-Complete-Practical-Handbook-Construction/dp/0735619670">Amazon link</a>
+                        <a class="card-link" href="https://twitter.com/stevemconstrux">Steve on Twitter - @stevemconstrux</a>
+                    </div>
+          </div>
+        </div>
+        <hr />
+        <div class="media">
+          <img src="https://images-na.ssl-images-amazon.com/images/I/41BKx1AxQWL._SX396_BO1,204,203,200_.jpg" alt="Book cover image" width="90" height="120" class="mr-3" />
+          <div class="media-body">
+                <h5 class="mt-0">The Pragmatic Programmer by Andrew Hunt and David Thomas</h5>
                 <p>
-                    <a href="https://www.amazon.com/Pragmatic-Programmer-Journeyman-Master/dp/020161622X"><img src="https://images-na.ssl-images-amazon.com/images/I/41BKx1AxQWL._SX396_BO1,204,203,200_.jpg" alt="Book cover image" width="90" height="120" /></a>
+                    <a href="https://www.amazon.com/Pragmatic-Programmer-Journeyman-Master/dp/020161622X">Amazon link</a>
                 </p>
-                <hr />
-            </li>
+           </div>
+        </div>
+        <hr />
+        <ul>
             <li>
                     <h4>Bridging the Communication Gap by Gojko Adzic</h4>
                     <p>
