--- a/src/app/page-resources/page-resources.component.html
+++ b/src/app/page-resources/page-resources.component.html
@@ -27,9 +27,12 @@
           <img src="https://images-na.ssl-images-amazon.com/images/I/41BKx1AxQWL._SX396_BO1,204,203,200_.jpg" alt="Book cover image" width="90" height="120" class="mr-3" />
           <div class="media-body">
                 <h5 class="mt-0">The Pragmatic Programmer by Andrew Hunt and David Thomas</h5>
-                <p>
+                <div>
+                    <a href="https://learning.oreilly.com/library/view/the-pragmatic-programmer/9780135956977/">Read book on O'Reilly Learning</a>
                     <a href="https://www.amazon.com/Pragmatic-Programmer-Journeyman-Master/dp/020161622X">Amazon link</a>
-                </p>
+                    <a href="">Andy Hunt on Twitter - @PragmaticAndy</a>
+                    <a href="">Dave Thomas on Twitter - @PragDave</a>
+                </div>
            </div>
         </div>
         <hr />
