Working on Resources

--- a/src/app/page-resources/page-resources.component.html
+++ b/src/app/page-resources/page-resources.component.html
@@ -16,9 +16,10 @@
           <div class="media-body">
                     <h5 class="mt-0">Code Complete, Second Edition by Steve McConnell</h5>
                     <div>
-                        <a class="card-link" href="https://learning.oreilly.com/library/view/code-complete-second/0735619670/">Read book on O'Reilly Learning</a>
+                        <a class="card-link" href="https://learning.oreilly.com/library/view/code-complete-second/0735619670/">Read on O'Reilly Learning</a>
                         <a class="card-link" href="https://www.amazon.com/Code-Complete-Practical-Handbook-Construction/dp/0735619670">Amazon link</a>
                         <a class="card-link" href="https://twitter.com/stevemconstrux">Steve on Twitter - @stevemconstrux</a>
+                        <a class="card-link" href="https://stevemcconnell.com/books/">Other books by Steve</a>
                     </div>
           </div>
         </div>
@@ -28,10 +29,11 @@
           <div class="media-body">
                 <h5 class="mt-0">The Pragmatic Programmer by Andrew Hunt and David Thomas</h5>
                 <div>
-                    <a href="https://learning.oreilly.com/library/view/the-pragmatic-programmer/9780135956977/">Read book on O'Reilly Learning</a>
-                    <a href="https://www.amazon.com/Pragmatic-Programmer-Journeyman-Master/dp/020161622X">Amazon link</a>
-                    <a href="">Andy Hunt on Twitter - @PragmaticAndy</a>
-                    <a href="">Dave Thomas on Twitter - @PragDave</a>
+                    <a class="card-link" href="https://learning.oreilly.com/library/view/the-pragmatic-programmer/9780135956977/">Read on O'Reilly Learning</a>
+                    <a class="card-link" href="https://www.amazon.com/Pragmatic-Programmer-Journeyman-Master/dp/020161622X">Amazon link</a>
+                    <a class="card-link" href="https://twitter.com/PragmaticAndy">Andy Hunt on Twitter - @PragmaticAndy</a>
+                    <a class="card-link" href="https://twitter.com/PragDave">Dave Thomas on Twitter - @PragDave</a>
+                    <a class="card-link" href="https://pragprog.com/">See the excellent resources at Pragmatic Bookshelf</a>
                 </div>
            </div>
         </div>
