--- a/src/app/page-current/page-current.component.html
+++ b/src/app/page-current/page-current.component.html
@@ -5,13 +5,22 @@
         </div>
         <div class="row">
             <div class="col-lg-12">
-                <small>Last updated: 30 August 2021</small><br/>&nbsp;<br/>
-                <p><small><i style="font-style: italic;">Note: This page might seem somewhat disjointed. It's a scratchpad of interesting ideas, links and notes related to topics I'm investigating or wrestling with.</i></small></p>
+
+                <p><small><i style="font-style: italic;">Note: This page is a scratchpad of interesting ideas, links and notes related to topics I'm investigating or wrestling with.</i></small></p>
+                <small>Last updated: 21 October 2021</small>
             </div>
         </div>
         <p>&nbsp;</p>
         <div class="row">
             <div class="col-lg-12">
+
+                <h3>Effective Remote Work</h3>
+                <p>&nbsp;<br>
+                  A new Pragmatic Bookshelf book on remote working. I'm interested in learning from what people have been experiencing in the shift to working from home. <a href="https://pragprog.com/titles/jsrw/effective-remote-work/">Effective Remote Work link at Pragmatic Bookshelf</a>
+                </p>
+
+                <p>&nbsp;</p>
+
 
                 <h3>Friday deploy freezes - on code freeze</h3>
                 <p>&nbsp;<br>
