--- a/src/app/page-current/page-current.component.html
+++ b/src/app/page-current/page-current.component.html
@@ -14,6 +14,13 @@
         <div class="row">
             <div class="col-lg-12">
 
+                <h3>How timeseries databases work</h3>
+                <p>&nbsp;<br>
+                  Interesting reading from Honeycomb about how TS db's work and what they are good for, with notes about observability. <a href="https://www.honeycomb.io/blog/time-series-database/">From the Honeycomb blog</a>
+                </p>
+
+                <p>&nbsp;</p>
+
                 <h3>Effective Remote Work</h3>
                 <p>&nbsp;<br>
                   A new Pragmatic Bookshelf book on remote working. I'm interested in learning from what people have been experiencing in the shift to working from home. <a href="https://pragprog.com/titles/jsrw/effective-remote-work/">Effective Remote Work link at Pragmatic Bookshelf</a>
