--- a/src/app/page-home/page-home.component.html
+++ b/src/app/page-home/page-home.component.html
@@ -6,7 +6,7 @@
                   </div>
                   <div class="col-md-8 vertical-auto-center">
                           <h1>The Software Pilgrim</h1>
-                          <p class="lead">Resources and writing from my personal journey in software development</p>
+                          <p class="lead">Resources and writing from my professional journey in software development</p>
                   </div>
       </div>
   </div>
