--- a/src/app/page-home/page-home.component.html
+++ b/src/app/page-home/page-home.component.html
@@ -13,7 +13,7 @@
 </div>
 <div class="row" >
   <div class="col-md-4">
-      <h5><a routerLink="/resources">Recommended resources</a></h5>
+      <h5><a routerLink="/resources">Recommended Resources for Developers</a></h5>
       <p>
           A list of useful and thought-provoking resources for becoming a better developer.
       </p>
