--- a/src/app/page-resources/page-resources.component.html
+++ b/src/app/page-resources/page-resources.component.html
@@ -4,10 +4,10 @@
 <div class="row">
     <div class="col-lg-12">
         <p>
-            So many resources are available to developers. There is only enough time for exploring the most relevant and impactful. Below is a list of some of the most useful I've found.
+            There are many resources available for developers, but there is only enough time for exploring the most relevant and impactful. Below is a list of some of the most useful I've found.
         </p>
         <div class="row">
-          <div class="col-lg-12"><small>Last updated: 20 October 2021</small></div>
+          <div class="col-lg-12"><small>Last updated: 2 November 2021</small></div>
       </div>
 
         <p>&nbsp;</p>
@@ -38,66 +38,101 @@
            </div>
         </div>
         <hr />
-        <ul>
-            <li>
-                    <h4>Bridging the Communication Gap by Gojko Adzic</h4>
-                    <p>
-                        <a href="https://www.amazon.com/gp/product/0955683610"><img src="https://images.gr-assets.com/books/1348029534l/6443938.jpg" alt="Book cover image" width="90" height="120" /></a>
-                    </p>
-                    <hr />
-            </li>
-            <li>
-                    <h4>Eric Sink on the Business of Software (Expert's Voice)</h4>
-                    <p>
-                        <a href="https://www.amazon.com/gp/product/1590596234"><img src="https://images-na.ssl-images-amazon.com/images/I/518t-Ihh5zL._SX331_BO1,204,203,200_.jpg" alt="Book cover image" width="90" height="120" /></a>
-                    </p>
-                    <hr />
-            </li>
-            <li>
-                    <h4>The Cathedral & the Bazaar: Musings on Linux and Open Source by an Accidental Revolutionary by Eric S. Raymond</h4>
-                    <p>
-                        <a href="https://www.amazon.com/gp/product/0596001088"><img src="https://images-na.ssl-images-amazon.com/images/I/51nX8ivtfZL._SX328_BO1,204,203,200_.jpg" alt="Book cover image" width="90" height="120" /></a>
-                    </p>
-                    <hr />
-            </li>
-            <li>
-                    <h4>The Lean Startup: How Today's Entrepreneurs Use Continuous Innovation to Create Radically Successful Businesses by Eric Ries</h4>
-                    <p>
-                        <a href="https://www.amazon.com/gp/product/0307887898"><img src="https://images-na.ssl-images-amazon.com/images/I/51T-sMqSMiL._SX329_BO1,204,203,200_.jpg" alt="Book cover image" width="90" height="120" /></a>
-                    </p>
-                    <hr />
-            </li>
-            <li>
-                    <h4>Career and Survival Strategies for Software Developers by Dan Appleman</h4>
-                    <p>
-                        <a href="https://app.pluralsight.com/library/courses/career-survival-strategies-4devs/"><img src="https://www.pluralsight.com/content/dam/pluralsight/newsroom/brand-assets/logos/PS_logo_F-02.png" alt="Pluralsight course logo" width="90" /></a>
-                    </p>
-                    <hr />
-            </li>
-            <li>
-                    <h4>Crucial Conversations: Tools for Talking When Stakes Are High by Patterson, Grenny, McMillan and Switzler</h4>
-                    <p>
-                        <a href="https://www.amazon.com/gp/product/0071401946/"><img src="https://images-na.ssl-images-amazon.com/images/I/515q7mzMOTL._SX332_BO1,204,203,200_.jpg" alt="Book cover image" width="90" height="120" /></a>
-                    </p>
-                    <hr />
-            </li>
-            <li>
-                <h4>Time management lecture by Randy Pausch (video and transcript)</h4>
-                <p>
-                    <a href="https://www.youtube.com/watch?v=oTugjssqOT0">Randy Pausch Lecture: Time Management on YouTube</a>
-                </p>
-                <p>
-                    <a href="https://www.cs.cmu.edu/~pausch/Randy/Randy/TMenglishTranscript.pdf">Transcript of lecture (pdf)</a>
-                </p>
-                <hr />
-            </li>
-            <li>
-                    <h4>Getting Things Done: The Art of Stress-Free Productivity by David Allen</h4>
-                    <p>
-                        <a href="https://www.amazon.com/Getting-Things-Done-Stress-Free-Productivity/dp/0143126563/"><img src="https://images-na.ssl-images-amazon.com/images/I/51W-ZL%2BQRlL._SX324_BO1,204,203,200_.jpg" alt="Book cover image" width="90" height="120" /></a>
-                    </p>
-                    <hr />
-                </li>
-        </ul>
+        <div class="media">
+            <img src="https://images.gr-assets.com/books/1348029534l/6443938.jpg" alt="Book cover image" width="90" height="120" class="mr-3" />
+            <div class="media-body">
+                <h5 class="mt-0">Bridging the Communication Gap by Gojko Adzic</h5>
+                <div>
+                    <a class="card-link" href="https://gojko.net/books/bridging-the-communication-gap/">Gojko's book page</a>
+                    <a class="card-link" href="https://www.amazon.com/gp/product/0955683610">Amazon link</a>
+                    <a class="card-link" href="https://twitter.com/gojkoadzic">Gojko on Twitter - @gojkoadzic</a>
+                </div>
+            </div>
+        </div>
+        <hr />
+        <div class="media">
+            <img src="https://images-na.ssl-images-amazon.com/images/I/518t-Ihh5zL._SX331_BO1,204,203,200_.jpg" alt="Book cover image" width="90" height="120" class="mr-3" />
+            <div class="media-body">
+                <h5 class="mt-0">Eric Sink on the Business of Software (Expert's Voice)</h5>
+                <div>
+                    <a class="card-link" href="https://learning.oreilly.com/library/view/eric-sink-on/9781590596234/">Read on O'Reilly Learning</a>
+                    <a class="card-link" href="https://www.amazon.com/gp/product/1590596234">Amazon link</a>
+                    <a class="card-link" href="https://twitter.com/eric_sink">Eric on Twitter - @eric_sink</a>
+                </div>
+            </div>
+        </div>
+        <hr />
+        <div class="media">
+            <img src="https://images-na.ssl-images-amazon.com/images/I/51nX8ivtfZL._SX328_BO1,204,203,200_.jpg" alt="Book cover image" width="90" height="120" class="mr-3" />
+            <div class="media-body">
+                <h5 class="mt-0">The Cathedral & the Bazaar: Musings on Linux and Open Source by an Accidental Revolutionary by Eric S. Raymond</h5>
+                <div>
+                    <a class="card-link" href="https://learning.oreilly.com/library/view/the-cathedral/0596001088/">Read on O'Reilly Learning</a>
+                    <a class="card-link" href="https://www.amazon.com/gp/product/0596001088">Amazon link</a>
+                </div>
+            </div>
+        </div>
+        <hr />
+        <div class="media">
+            <img src="https://images-na.ssl-images-amazon.com/images/I/51T-sMqSMiL._SX329_BO1,204,203,200_.jpg" alt="Book cover image" width="90" height="120" class="mr-3" />
+            <div class="media-body">
+                <h5 class="mt-0">The Lean Startup: How Today's Entrepreneurs Use Continuous Innovation to Create Radically Successful Businesses by Eric Ries</h5>
+                <div>
+                    <a class="card-link" href="https://www.amazon.com/gp/product/0307887898">Amazon link</a>
+                    <a class="card-link" href="https://twitter.com/ericries">Eric on Twitter - @ericries</a>
+                </div>
+            </div>
+        </div>
+        <hr />
+        <div class="media">
+            <div class="media-body">
+                <h5 class="mt-0">Career and Survival Strategies for Technologists by Dan Appleman (Pluralsight video)</h5>
+                <div>
+                    <a class="card-link" href="https://app.pluralsight.com/library/courses/career-survival-strategies-4devs">Pluralsight link</a>
+                    <a class="card-link" href="https://www.pluralsight.com/authors/dan-appleman">Dan's other training on Pluralsight</a>
+                    <a class="card-link" href="https://twitter.com/danappleman">Dan on Twitter - @danappleman</a>
+                </div>
+            </div>
+        </div>
+        <hr />
+        <div class="media">
+            <img src="https://images-na.ssl-images-amazon.com/images/I/515q7mzMOTL._SX332_BO1,204,203,200_.jpg" alt="Book cover image" width="90" height="120" class="mr-3" />
+            <div class="media-body">
+                <h5 class="mt-0">Crucial Conversations: Tools for Talking When Stakes Are High by Patterson, Grenny, McMillan and Switzler</h5>
+                <div>
+                    <a class="card-link" href="https://learning.oreilly.com/library/view/crucial-conversations-tools/9780071771320/">Read on O'Reilly Learning</a>
+                    <a class="card-link" href="https://www.amazon.com/gp/product/0071401946/">Amazon link</a>
+                    <a class="card-link" href="https://cruciallearning.com/crucial-conversations-for-dialogue/">The Crucial Converstions site</a>
+                </div>
+            </div>
+        </div>
+        <hr />
+        <div class="media">
+            <div class="media-body">
+                <h5 class="mt-0">Time management lecture by Randy Pausch (video and transcript)</h5>
+                <div>
+                    <a class="card-link" href="https://www.youtube.com/watch?v=oTugjssqOT0">Randy Pausch Lecture: Time Management on YouTube</a>
+                    <a class="card-link" href="https://www.cs.cmu.edu/~pausch/Randy/Randy/TMenglishTranscript.pdf">Transcript of lecture (pdf)</a>
+                </div>
+            </div>
+        </div>
+        <hr />
+        <div class="media">
+            <img src="https://images-na.ssl-images-amazon.com/images/I/51W-ZL%2BQRlL._SX324_BO1,204,203,200_.jpg" alt="Book cover image" width="90" height="120" class="mr-3" />
+            <div class="media-body">
+                <h5 class="mt-0">Getting Things Done: The Art of Stress-Free Productivity by David Allen</h5>
+                <div>
+                    <a class="card-link" href="https://www.amazon.com/Getting-Things-Done-Stress-Free-Productivity/dp/0143126563/">Amazon link</a>
+                    <a class="card-link" href="https://gettingthingsdone.com/">The Getting Things Done web page</a>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="col-lg-12">
+        <p>&nbsp;</p>
+        <p>
+            Visit my Software bookshelf on Goodreads for more resources:
+            <a href="https://www.goodreads.com/review/list/748574?shelf=software&sort=rating">Graham's software bookshelf on Goodreads</a>
+        </p>
     </div>
 </div>
