Home page changes

--- a/src/app/page-home/page-home.component.html
+++ b/src/app/page-home/page-home.component.html
@@ -6,22 +6,22 @@
                   </div>
                   <div class="col-md-8 vertical-auto-center">
                           <h1>The Software Pilgrim</h1>
-                          <p class="lead">Resources and writing from my professional journey in software development</p>
+                          <p class="lead">A collection of resources and writing from my professional journey in software development - Graham Mc Allister</p>
                   </div>
       </div>
   </div>
 </div>
 <div class="row" >
   <div class="col-md-4">
-      <h5><a routerLink="/resources">Recommended Resources for Developers</a></h5>
+      <h5><a routerLink="/resources">Book Recommendations and Resources for Developers</a></h5>
       <p>
-          A list of useful and thought-provoking resources for becoming a better developer.
+          A list of useful and interesting books and resources for developers.
       </p>
   </div>
   <div class="col-md-4">
-      <h5><a routerLink="/current">Currently reading on the web</a></h5>
+      <h5><a routerLink="/current">Interesting web links</a></h5>
       <p>
-          What's on my mind - talks and books
+          Some bookmarks of currently interesting topics.
       </p>
   </div>
   <div class="col-md-4">
