--- a/src/app/page-home/page-home.component.html
+++ b/src/app/page-home/page-home.component.html
@@ -15,7 +15,7 @@
   <div class="col-md-4">
       <h5><a routerLink="/resources">Book Recommendations and Resources for Developers</a></h5>
       <p>
-          A list of useful and interesting books and resources for developers.
+          A list of helpful books and resources for developers.
       </p>
   </div>
   <div class="col-md-4">
