Update bookmarks to add git remote

--- a/src/app/page-bookmarks/page-bookmarks.component.html
+++ b/src/app/page-bookmarks/page-bookmarks.component.html
@@ -3,7 +3,7 @@
   <h2>Bookmarks, links, snippets, reminders and lessons learned</h2>
   <hr/>
   <div class="row">
-      <div class="col-lg-12"><small>Last updated: 31 August 2021</small></div>
+      <div class="col-lg-12"><small>Last updated: 18 January 2022</small></div>
   </div>
   <p>&nbsp;</p>
 <div class="row">
@@ -46,6 +46,14 @@
   <p>Taken from here: <a href="https://www.ivankristianto.com/create-patch-files-from-multiple-commits-in-git/">Create Patch Files From Multiple Commits In Git</a></p>
   <hr />
 </li>
+<li>
+  <h4>List remote repositories</h4>
+  <p>Often a repo will have multiple remote repos to sync with, and it can happen that you forget or lose track of which repositories are linked.</p>
+  <hr />
+  <blockquote class="blockquote"><code>git remote -v</code></blockquote>
+  <p>See the documentation here: <a href="https://git-scm.com/docs/git-remote">Git Remote documentation</a></p>
+</li>
+</ul>
 <li>
   <p>Some more useful tools for GIT. Check out <a href="https://github.com/mhagger/git-imerge">git-imerge</a>, a tool for step by step merging, and <a href="https://github.com/arc90/git-sweep">git-sweep</a>, a tool for deleting branches that have previously been merged to main.</p>
   <hr />
