Add article on doing less work to currently thinking about page

--- a/src/app/page-home/page-home.component.html
+++ b/src/app/page-home/page-home.component.html
@@ -21,7 +21,7 @@
   <div class="col-md-4">
       <h5><a routerLink="/current">Interesting web links</a></h5>
       <p>
-          Some bookmarks of currently interesting topics.
+          Bookmarks of some current topics I find interesting.
       </p>
   </div>
   <div class="col-md-4">
