--- a/src/app/page-current/page-current.component.html
+++ b/src/app/page-current/page-current.component.html
@@ -14,6 +14,11 @@
         <div class="row">
             <div class="col-lg-12">
 
+                <h3></h3>
+                <p>&nbsp;<br>
+                    Maybe we should do less work? An interesting short essay on work. <a href="https://www.johnwhiles.com/posts/work.html">John Whiles</a>
+                </p>
+
                 <h3>How timeseries databases work</h3>
                 <p>&nbsp;<br>
                   Interesting reading from Honeycomb about how TS db's work and what they are good for, with notes about observability. <a href="https://www.honeycomb.io/blog/time-series-database/">From the Honeycomb blog</a>
