--- a/src/app/page-current/page-current.component.html
+++ b/src/app/page-current/page-current.component.html
@@ -14,7 +14,7 @@
         <div class="row">
             <div class="col-lg-12">
 
-                <h3></h3>
+                <h3>Less work</h3>
                 <p>&nbsp;<br>
                     Maybe we should do less work? An interesting short essay on work. <a href="https://www.johnwhiles.com/posts/work.html">John Whiles</a>
                 </p>
