Accelerate book added to current

--- a/src/app/page-current/page-current.component.html
+++ b/src/app/page-current/page-current.component.html
@@ -7,17 +7,26 @@
             <div class="col-lg-12">
 
                 <p><small><i style="font-style: italic;">Note: This page is a scratchpad of interesting ideas, links and notes related to topics I'm investigating or wrestling with.</i></small></p>
-                <small>Last updated: 4 April 2022</small>
+                <small>Last updated: 4 July 2022</small>
             </div>
         </div>
         <p>&nbsp;</p>
         <div class="row">
             <div class="col-lg-12">
 
+                <h3>Accelerate</h3>
+                <p>&nbsp;<br>
+                    Found this book through the Hanselminutes Podcast, recommended by Roberta Arcoverde, a development manager from Stack Overflow: <a href="https://learning.oreilly.com/library/view/accelerate/9781457191435/00-Cover.xhtml">Accelerate</a> by Nicole Forsgren, Jez Humble and Gene Kim.
+                </p>
+
+                <p>&nbsp;</p>
+
                 <h3>Less work</h3>
                 <p>&nbsp;<br>
                     Maybe we should do less work? An interesting short essay on work. <a href="https://www.johnwhiles.com/posts/work.html">John Whiles</a>
                 </p>
+
+                <p>&nbsp;</p>
 
                 <h3>How timeseries databases work</h3>
                 <p>&nbsp;<br>
