--- a/src/app/page-current/page-current.component.html
+++ b/src/app/page-current/page-current.component.html
@@ -6,13 +6,20 @@
         <div class="row">
             <div class="col-lg-12">
 
-                <p><small><i style="font-style: italic;">Note: This page is a scratchpad of interesting ideas, links and notes related to topics I'm investigating or wrestling with.</i></small></p>
-                <small>Last updated: 4 July 2022</small>
+                <p><small><i style="font-style: italic;">This page is a scratchpad of interesting ideas, links and notes related to topics I'm investigating or wrestling with.</i></small></p>
+                <small>Last updated: 26 May 2023</small>
             </div>
         </div>
         <p>&nbsp;</p>
         <div class="row">
             <div class="col-lg-12">
+
+                <h3>Out of the tar pit</h3>
+                <p>&nbsp;<br>
+                    Looking at some important software engineering papers, and intrigued to do more learning about them. See this podcast here for an interesting discussion: <a href="https://futureofcoding.org/episodes/063.html">Future of coding episode 63</a>
+                </p>
+
+                <p>&nbsp;</p>
 
                 <h3>Accelerate</h3>
                 <p>&nbsp;<br>
