--- a/src/app/page-home/page-home.component.html
+++ b/src/app/page-home/page-home.component.html
@@ -1,6 +1,11 @@
 <div class="jumbotron">
   <div class="container">
       <div class="row">
+        <div class="col-md-12">
+            &nbsp;
+        </div>
+      </div>
+      <div class="row">
               <div class="col-md-4 vertical-auto-center text-center mb-4">
                       <img src="assets/images/Graham.jpg" alt="Photo of Graham" height="193" width="143" class="rounded-circle"/>
                   </div>
@@ -11,7 +16,13 @@
       </div>
   </div>
 </div>
+<div class="row">
+    <div class="col-md-12">
+        &nbsp;
+    </div>
+  </div>
 <div class="row" >
+    
   <div class="col-md-4">
       <h5><a routerLink="/resources">Book Recommendations and Resources for Developers</a></h5>
       <p>
