--- a/src/app/page-home/page-home.component.html
+++ b/src/app/page-home/page-home.component.html
@@ -1,44 +1,56 @@
-<div class="jumbotron">
-  <div class="container">
-      <div class="row">
-        <div class="col-md-12">
-            &nbsp;
-        </div>
-      </div>
-      <div class="row">
-              <div class="col-md-4 vertical-auto-center text-center mb-4">
-                      <img src="assets/images/Graham.jpg" alt="Photo of Graham" height="193" width="143" class="rounded-circle"/>
-                  </div>
-                  <div class="col-md-8 vertical-auto-center">
-                          <h1>The Software Pilgrim</h1>
-                          <p class="lead">A collection of resources and writing from my professional journey in software development - Graham Mc Allister</p>
-                  </div>
-      </div>
-  </div>
-</div>
-<div class="row">
-    <div class="col-md-12">
-        &nbsp;
-    </div>
-  </div>
-<div class="row" >
+<mat-card>
+    <mat-card-header>
+        <mat-card-title-group>
+        <mat-card-title>
+            The Software Pilgrim
+        </mat-card-title>
+        <mat-card-subtitle>A collection of resources and writing from my professional journey in software development - Graham Mc Allister</mat-card-subtitle>
+        <img src="assets/images/Graham.jpg" alt="Photo of Graham" class="rounded-full scale-50"/>
+    </mat-card-title-group>
+</mat-card-header>
+
+  <mat-card-content>
+              <div>
+                      
+            </div>
+  </mat-card-content>
+</mat-card>
     
-  <div class="col-md-4">
-      <h5><a routerLink="/resources">Book Recommendations and Resources for Developers</a></h5>
-      <p>
-          A list of helpful books and resources for developers.
-      </p>
-  </div>
-  <div class="col-md-4">
-      <h5><a routerLink="/current">Interesting web links</a></h5>
-      <p>
-          Bookmarks of some current topics I find interesting.
-      </p>
-  </div>
-  <div class="col-md-4">
-      <h5><a routerLink="/bookmarks">Useful reminders and snippets</a></h5>
-      <p>
-          Shortcut keys, bookmarks and handy links for safe keeping.
-      </p>
-  </div>
-</div>
+<mat-card>
+    <mat-card-header>
+        <mat-card-title-group>
+    <mat-card-title>
+        <a routerLink="/resources">Book Recommendations and Resources for Developers</a>
+        </mat-card-title>
+        </mat-card-title-group>
+    </mat-card-header>
+    <mat-card-content>
+        A list of helpful books and resources for developers.
+    </mat-card-content>
+</mat-card>
+
+<mat-card>
+    <mat-card-header>
+        <mat-card-title-group>
+    <mat-card-title>
+        <a routerLink="/current">Interesting web links</a>
+        </mat-card-title>
+        </mat-card-title-group>
+    </mat-card-header>
+    <mat-card-content>
+        Bookmarks of some current topics I find interesting.
+    </mat-card-content>
+</mat-card>
+
+<mat-card>
+    <mat-card-header>
+        <mat-card-title-group>
+    <mat-card-title>
+        <a routerLink="/bookmarks">Useful reminders and snippets</a>
+        </mat-card-title>
+        </mat-card-title-group>
+    </mat-card-header>
+    <mat-card-content>
+        Shortcut keys, bookmarks and handy links for safe keeping.
+    </mat-card-content>
+</mat-card>
