--- a/src/app/page-home/page-home.component.html
+++ b/src/app/page-home/page-home.component.html
@@ -1,11 +1,13 @@
-<mat-card>
+<mat-card class="p-6 rounded-xl space-x-4">
     <mat-card-header>
         <mat-card-title-group>
-        <mat-card-title>
+
+        <mat-card-title class="text-3xl font-medium">
+
             The Software Pilgrim
         </mat-card-title>
         <mat-card-subtitle>A collection of resources and writing from my professional journey in software development - Graham Mc Allister</mat-card-subtitle>
-        <img src="assets/images/Graham.jpg" alt="Photo of Graham" class="rounded-full scale-50"/>
+        <img src="assets/images/Graham.jpg" alt="Photo of Graham" />
     </mat-card-title-group>
 </mat-card-header>
 
@@ -16,10 +18,10 @@
   </mat-card-content>
 </mat-card>
     
-<mat-card>
+<mat-card class="p-6">
     <mat-card-header>
         <mat-card-title-group>
-    <mat-card-title>
+    <mat-card-title class="text-2xl font-medium">
         <a routerLink="/resources">Book Recommendations and Resources for Developers</a>
         </mat-card-title>
         </mat-card-title-group>
@@ -29,10 +31,10 @@
     </mat-card-content>
 </mat-card>
 
-<mat-card>
+<mat-card class="p-6">
     <mat-card-header>
         <mat-card-title-group>
-    <mat-card-title>
+    <mat-card-title  class="text-2xl font-medium">
         <a routerLink="/current">Interesting web links</a>
         </mat-card-title>
         </mat-card-title-group>
@@ -42,10 +44,10 @@
     </mat-card-content>
 </mat-card>
 
-<mat-card>
+<mat-card class="p-6">
     <mat-card-header>
         <mat-card-title-group>
-    <mat-card-title>
+    <mat-card-title  class="text-2xl font-medium">
         <a routerLink="/bookmarks">Useful reminders and snippets</a>
         </mat-card-title>
         </mat-card-title-group>
